--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>丹丹专属</title>
 </head>
 <body>
-    <h1>丹丹</h1>
+    <h1>丹丹可以成为我的恋人吗？</h1>
+    <button>可以</button>
+    <button>不要</button>
 </body>
 </html>
