--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>丹丹专属</title>
+    <style>
+.one{
+    width: 300px;
+    height: 300px;
+    background-color: green;
+}
+.two{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+}
+    </style>
 </head>
 <body>
+<img src="" alt="">
     <h1>丹丹可以成为我的恋人吗？</h1>
-    <button>可以</button>
-    <button>不要</button>
+    <button class="one">可以</button>
+    <button class="two">不要</button>
 </body>
 </html>
