--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     <title>丹丹专属</title>
     <style>
 .one{
-    width: 300px;
-    height: 300px;
-    background-color: green;
-}
-.two{
-    width: 50px;
+    width: 100px;
     height: 50px;
     background-color: red;
+}
+.two{
+    width: 100px;
+    height: 50px;
+    background-color: blue;
+}
+img{
+    width: 100px;
+    height: 100px;
 }
     </style>
 </head>
 <body>
-<img src="" alt="">
+<img src="hhhhhhhhhhh\images\fe42b5483cf9f36b2c2ffd6e80599e0.jpg" alt="">
     <h1>丹丹可以成为我的恋人吗？</h1>
     <button class="one">可以</button>
     <button class="two">不要</button>
